force-app/main/default/objects/PDRI__Deployment_Plan_Step_Result__c/fields/PDRI__Data_Record_Failures__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Record_Failures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Record Failures</label>
    <type>Checkbox</type>
</CustomField>