force-app/main/default/objects/PDRI__Deployment_Plan_Step_Result__c/fields/PDRI__Deployment_Plan_Step__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Plan_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Plan Step</label>
    <referenceTo>PDRI__Deployment_Plan_Step__c</referenceTo>
    <relationshipLabel>Deployment Plan Step Results</relationshipLabel>
    <relationshipName>Deployment_Plan_Step_Results</relationshipName>
    <type>Lookup</type>
</CustomField>